# lsfx-lsefx-converter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
converter/: __init__.py  __main__.py  _output.py  allspark.py  cli.py  effect_model.py  errors.py  lsefx_io.py  lsf_reader.py  lsf_writer.py  lsx_model.py  transform.py
docs/: lsf-format.md
tests/: conftest.py  helpers.py  test_allspark.py  test_cli.py  test_compile_parity.py  test_lsefx_io.py  test_lsf.py  test_parity.py  test_transform.py
